--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,9 +10,9 @@
         android:id="@+id/imgTopLogoHome"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/top_logo"
         app:layout_constraintStart_toStartOf="parent"
-        android:src="@drawable/top_logo"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textTitlePrincipalHome"
@@ -72,6 +72,7 @@
         android:layout_marginTop="14dp"
         android:minWidth="48dp"
         android:minHeight="48dp"
+        android:paddingBottom="20dp"
         android:showText="true"
         android:textAlignment="textEnd"
         android:textOff="@string/text_label_switch_no"
@@ -95,6 +96,37 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/switchPrice"
         tools:progress="10" />
+
+    <Button
+        android:id="@+id/btnStart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="@string/btn_start_home"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/seekBarPriceHome" />
+
+    <CheckBox
+        android:id="@+id/checkTermsHome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="14dp"
+        app:layout_constraintEnd_toStartOf="@id/textTermsHome"
+        app:layout_constraintTop_toBottomOf="@id/btnStart" />
+
+    <TextView
+        android:id="@+id/textTermsHome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="14dp"
+        android:fontFamily="@font/inter_medium"
+        android:padding="14dp"
+        android:paddingStart="0dp"
+        android:text="Terms and Conditions"
+        app:layout_constraintTop_toBottomOf="@id/btnStart"
+        app:layout_constraintStart_toEndOf="@id/checkTermsHome"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
