--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -116,7 +116,7 @@
         android:id="@+id/textLinkTermsHome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="40dp"
         android:fontFamily="@font/inter_medium"
         android:paddingStart="0dp"
         android:text="Terms and Conditions"
@@ -128,6 +128,7 @@
         android:id="@+id/checkTermsHome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:buttonTint="@color/purple_500"
         android:duplicateParentState="false"
         android:text="I have read and agree to the terms"
         android:textAlignment="textEnd"
