--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,9 +11,10 @@
         android:id="@+id/imgTopLogoHome"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/top_logo"
         app:layout_constraintStart_toStartOf="parent"
-        android:src="@drawable/top_logo"/>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ImageContrastCheck" />
 
     <TextView
         android:id="@+id/textTitlePrincipalHome"
@@ -119,9 +120,9 @@
         android:layout_marginTop="14dp"
         android:fontFamily="@font/inter_medium"
         android:paddingStart="0dp"
-        android:text="Terms and Conditions"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/link_terms"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnStart" />
 
     <CheckBox
@@ -129,7 +130,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:duplicateParentState="false"
-        android:text="I have read and agree to the terms"
+        android:text="@string/label_checkbox"
         android:textAlignment="textEnd"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
