--- a/app/src/main/res/layout/fragment_suggestion.xml
+++ b/app/src/main/res/layout/fragment_suggestion.xml
@@ -95,7 +95,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewSuggestion" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonTryAnother"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
@@ -123,12 +123,15 @@
 
     <TextView
         android:id="@+id/chosenSuggestion"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/inter_medium"
         android:text="@string/chosen_suggestion"
+        android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         app:layout_constraintBottom_toTopOf="@+id/labelParticipants"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -142,7 +145,7 @@
         android:padding="2dp"
         android:text="@string/label_price"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/buttonTryAnother"
         app:layout_constraintStart_toEndOf="@+id/iconStar2"
         app:layout_constraintTop_toBottomOf="@+id/labelParticipants"
         app:layout_constraintVertical_bias="0.526" />
@@ -155,7 +158,7 @@
         android:text="@string/type_price"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/buttonTryAnother"
         app:layout_constraintEnd_toEndOf="@+id/typeActivity"
         app:layout_constraintStart_toEndOf="@+id/phraseCategory"
         app:layout_constraintTop_toBottomOf="@+id/totalParticipants" />
